[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.4",
    "langchain-docling>=2.0.0",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
